GNOME Bugzilla – Bug 727570
lua-factory: Fix typo in debug statement
Last modified: 2014-04-05 22:18:31 UTC
.
Created attachment 273560 [details] [review] lua-factory: Fix typo in debug statement And correct the bizarre printf usage somewhat.
Attachment 273560 [details] pushed as 2751fc5 - lua-factory: Fix typo in debug statement