lua-factory: Fix typo in debug statement

And correct the bizarre printf usage somewhat.

https://bugzilla.gnome.org/show_bug.cgi?id=727570